Change wording and fix cross browser slider alignment

--- a/style.css
+++ b/style.css
@@ -23,8 +23,9 @@ user-select: none;
 #panel button.active {background-color: white; color:#333333;}
 #panel .content {padding:10px; width:270px; display: none;}
 #panel .content#colourpicker {display: block;}
-#panel input[type="range"] {width:200px;}
-#panel label {float:left; width:60px; clear:both; line-height:40px;}
+#panel input[type="range"] {width:200px; vertical-align: middle; margin:0; padding:0; margin-left:10px;}
+#panel label {display: inline-block; vertical-align: middle; margin:0; padding:0; width:50px;}
+.slider {height:35px;}
 #panel h3 {text-align: center; font-weight:normal; font-size:100%;}
 #panel #mixed {display: block; width:100%; height:50px; background-color:white; cursor:pointer;}
 #preview {width:200px; height:200px; margin:auto; display: block;}
